# ffxiahbot

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  environment.yml  index.html  macros.py  makebin.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/actions/setup-uv-env/: action.yml
.github/workflows/: codeql.yml  main.yml  on-release-main.yml  sphinx.yml
advanced/: index.html
apps/: alter.py  broker.py  scrub.py
data/: alter.yaml  broker.yaml  items.csv  scrub.yaml
doc/: Makefile  build.sh
doc/source/: conf.py  index.rst
doc/source/markdown/: advanced-m.md  advanced-pythonpath.md  advanced.md  download.md  features.md  quickstart-linux.md  quickstart-windows.md  quickstart.md  requirements.md  requires.md  scrubbing.md  setup.md  usage.md
doc/source/scripts/: apps.py  generate.sh  titles.py
docs/: advanced.md  scrubbing.md  setup.md  usage.md
ffxiahbot/: __init__.py  __main__.py  common.py  config.py  darkobject.py  database.py  item.py  itemlist.py  logutils.py  timeutils.py
ffxiahbot/apps/: broker.py  clear.py  refill.py  scrub.py
ffxiahbot/apps/broker/: options.py  run.py
ffxiahbot/apps/buyer/: options.py  run.py
ffxiahbot/apps/clear/: options.py  run.py
ffxiahbot/apps/refill/: options.py  run.py
ffxiahbot/apps/scrub/: options.py  run.py
ffxiahbot/apps/seller/: options.py  run.py
ffxiahbot/auction/: __init__.py  browser.py  buyer.py  cleaner.py  manager.py  seller.py  worker.py
ffxiahbot/options/: ah.py  base.py  basic.py  input.py  output.py  sql.py
ffxiahbot/scrubbing/: __init__.py  enums.py  ffxiah.py  scrubber.py
ffxiahbot/tables/: __init__.py  auctionhouse.py  base.py  deliverybox.py
ffxiahbot/tests/: sqltest.py  test_common.py  test_darkobject.py  test_database.py  test_item.py  test_itemlist.py  test_logutils.py  test_timeutils.py
ffxiahbot/tests/auction/: test_browser.py  test_buyer.py  test_cleaner.py  test_manager.py  test_seller.py  test_worker.py
ffxiahbot/tests/scrubbing/: test_ffxiah.py  test_scrubber.py
ffxiahbot/tests/tables/: test_auctionhouse.py  test_base.py  test_deliverybox.py
pydarkstar/: __init__.py  broker.py  common.py  darkobject.py  database.py  item.py  itemlist.py  logutils.py  options.py  rc.py  timeutils.py
pydarkstar/apps/: ahoptions.py  basicoptions.py  inputoptions.py  outoptions.py  sqloptions.py
pydarkstar/apps/alter/: options.py  run.py
pydarkstar/apps/broker/: options.py  run.py
pydarkstar/apps/clear/: options.py  run.py
pydarkstar/apps/refill/: options.py  run.py
pydarkstar/apps/scrub/: options.py  run.py
pydarkstar/auction/: __init__.py  auctionbase.py  browser.py  buyer.py  cleaner.py  manager.py  query.py  seller.py  worker.py
pydarkstar/auctionhouse/: browser.py  buyer.py  cleaner.py  seller.py
pydarkstar/options/: ah.py  base.py  basic.py  sql.py
pydarkstar/scrub/: __init__.py  common.py  ffxiah.py  scrubber.py
pydarkstar/scrubbing/: ffxiah.py  scrubber.py
pydarkstar/tables/: __init__.py  auction_house.py  auctionhouse.py  base.py  delivery_box.py  deliverybox.py
pydarkstar/tests/: sqltest.py  test_common.py  test_darkobject.py  test_database.py  test_item.py  test_itemlist.py  test_logutils.py  test_options.py  test_timeutils.py
pydarkstar/tests/auction/: test_browser.py  test_buyer.py  test_cleaner.py  test_manager.py  test_seller.py  test_worker.py
pydarkstar/tests/scrubbing/: test_ffxiah.py  test_scrubber.py
pydarkstar/tests/tables/: test_auctionhouse.py  test_base.py  test_deliverybox.py
search/: search_index.json
setup/: index.html
tests/: broker.py  common.py  conftest.py  cookbook.py  darkobject.py  database.py  item.py  itemlist.py  logutils.py  options.py  test_common.py  test_connection.py  test_darkobject.py  test_database.py  test_imports.py  test_item.py  test_itemlist.py  test_timeutils.py  timeutils.py
tests/apps/: test_clear.py  test_refill.py
tests/auction/: auctionbase.py  browser.py  buyer.py  cleaner.py  manager.py  query.py  seller.py  test_browser.py  test_buyer.py  test_cleaner.py  test_manager.py  test_seller.py  test_worker.py  worker.py
tests/scrub/: common.py  ffxiah.py  scrubber.py
tests/scrubbing/: ffxiah.py  scrubber.py  test_ffxiah.py  test_scrubber.py
tests/tables/: auction_house.py  base.py  delivery_box.py  deliverybox.py  test_auctionhouse.py  test_base.py  test_deliverybox.py
usage/: index.html
