[project]
name = "ffxiahbot"
version = "5.0.0"
description = "A command line tool for interacting with a FFXI server."
authors = ["Adam Gagorik <adam.gagorik@gmail.com>"]
repository = "https://github.com/AdamGagorik/ffxiahbot"
documentation = "https://AdamGagorik.github.io/ffxiahbot/"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.32",
    "pymysql>=1.1.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
]
packages = [
  {include = "ffxiahbot"}
]

[tool.mypy]
files = ["ffxiahbot"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(message)s"

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Check for execution of untrusted input
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["ffxiahbot"]

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.0",
    "pre-commit>=3.8.0",
    "mypy>=1.11.2",
    "deptry>=0.20.0",
    "pytest>=8.3.2",
    "mkdocs-material>=9.5.33",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "pytest-cov>=5.0.0",
]
